--- a/public/404.html
+++ b/public/404.html
@@ -614,24 +614,22 @@
 
 
 
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.css">
+    <link rel="stylesheet" href="/lib/gitalk/gitalk.css">
 
-<script>
-  NexT.utils.getScript('//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js', () => {
-    var gitalk = new Gitalk({
-      clientID: '',
-      clientSecret: '',
-      repo: 'https://vanishke.github.io/hexo',
-      owner: '',
-      admin: [''],
-      id: '',
-        language: window.navigator.language || window.navigator.userLanguage,
-      
-      distractionFreeMode: ''
-    });
-    gitalk.render('gitalk-container');
-  }, window.Gitalk);
-</script>
+    <script src="/lib/gitalk/gitalk.min.js"></script>
+    <script src="/lib/gitalk/md5.js"></script>
+    <script type="text/javascript">
+        const gitalk = new Gitalk({
+          clientID: '95db1f51f05191be80c5',
+          clientSecret: 'eccc0bbe52b90a08e97140cece84ee32577172b2',
+          repo: 'https://vanishke.github.io/hexo',
+          owner: 'vanishke',
+          admin: ['vanishke'],
+          id: md5(window.location.pathname),
+          distractionFreeMode: 'true'
+        })
+        gitalk.render('gitalk-container')
+    </script>
 
 
   
