blog auto backup script's commit

--- a/public/404.html
+++ b/public/404.html
@@ -617,7 +617,6 @@
     <link rel="stylesheet" href="/lib/gitalk/gitalk.css">
 
     <script src="/lib/gitalk/gitalk.min.js"></script>
-    <script src="/lib/gitalk/md5.js"></script>
     <script type="text/javascript">
         const gitalk = new Gitalk({
           clientID: '95db1f51f05191be80c5',
@@ -625,7 +624,7 @@
           repo: 'https://vanishke.github.io/hexo',
           owner: 'vanishke',
           admin: ['vanishke'],
-          id: md5(window.location.pathname),
+          id: window.location.pathname,
           distractionFreeMode: 'true'
         })
         gitalk.render('gitalk-container')
