--- a/public/404.html
+++ b/public/404.html
@@ -614,21 +614,25 @@
 
 
 
-    <link rel="stylesheet" href="/lib/gitalk/gitalk.css">
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 
-    <script src="/lib/gitalk/gitalk.min.js"></script>
-    <script type="text/javascript">
-        const gitalk = new Gitalk({
+   <script type="text/javascript">
+        var gitalk = new Gitalk({
           clientID: '95db1f51f05191be80c5',
           clientSecret: 'eccc0bbe52b90a08e97140cece84ee32577172b2',
-          repo: 'https://vanishke.github.io/hexo',
+          repo: 'blog-comments',
           owner: 'vanishke',
           admin: ['vanishke'],
-          id: window.location.pathname,
-          distractionFreeMode: 'true'
+          id: location.pathname,
+          labels: ['Gitalk'],
+          perPage: 15,
+          pagerDirection: 'last',
+          createIssueManually: true,
+          distractionFreeMode: false
         })
-        gitalk.render('gitalk-container')
-    </script>
+        gitalk.render('gitalk-container')           
+       </script>
 
 
   
