blog auto backup script's commit

--- a/public/404.html
+++ b/public/404.html
@@ -614,9 +614,8 @@
 
 
 
-  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-
+  <link rel="stylesheet" href="/lib/gitalk/gitalk.css">
+  <script src="/lib/gitalk/gitalk.min.js"></script>
    <script type="text/javascript">
         var gitalk = new Gitalk({
           clientID: '95db1f51f05191be80c5',
